<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/main_tab_1"
        android:title="@string/main_tab1" />
    <item
        android:id="@+id/communityFragment"
        android:icon="@drawable/main_tab_2"
        android:title="@string/main_tab2" />
    <item
        android:id="@+id/mallFragment"
        android:icon="@drawable/main_tab_3"
        android:title="@string/main_tab3" />

    <item
        android:id="@+id/idleFragment"
        android:icon="@drawable/main_tab_4"
        android:title="@string/main_tab4" />

    <item
        android:id="@+id/myFragment"
        android:icon="@drawable/main_tab_5"
        android:title="@string/main_tab5" />


</menu>